# mcp-static-embed-tool

./: .gitattributes  .sourcery.yaml  API_KEY_INTEGRATION.md  AUTHENTICATION.md  Cargo.toml  Dockerfile  LICENSE  README.md  SPECSTORY_ENCRYPTION.md  coverage_summary.txt  dev-start.sh  git-aliases-setup.txt  git-crypt-1password.sh  install.sh  instructions.md  server.md  strategic-data.json  tarpaulin-report.html  tarpaulin_output.txt  test-mcp.js  test_api_key.sh  test_error.txt  test_output.txt  test_panic.txt  test_simple.txt
.github/: copilot-instructions.md
.github/workflows/: build-docker-image.yaml  ci.yml
.specstory/: .gitignore
.specstory/history/: 2025-09-22_09-29Z-rust-function-syntax-errors-and-corrections.md  2025-09-22_10-06Z-fix-subsec-unknown-word-,-surrealmcp-unknown-word.md  2025-09-22_10-15Z-what-is-the-path-is-~-models.md  2025-10-04_23-48Z-fix-variable-`inputs-figma-personal-access-token`-not-found,-did-you-mean-${fileworkspacefolder}.md  2025-10-05_03-33Z-analyze-this-codebase-to-generate-or-update-`-github-copilot-instructions-md`-for-guiding-ai-coding-agents.md  2025-10-12_19-13Z-fix-the-name-`hashmap`-is-defined-multiple-times.md  2025-10-12_19-13Z-fix-unresolved-import-`governor-state-directstate`.md  2025-10-12_19-14Z-fix-unresolved-import-`governor-state-directstate`.md  2025-10-12_19-14Z-fix-unresolved-imports-`governor-state-direct-directstate`,-`governor-state-keyed-notkeyed`.md  2025-10-12_19-15Z-fix-missing-generics-for-struct-`axum-http-response`.md  2025-10-12_19-16Z-fix-struct-takes-3-generic-arguments-but-2-generic-arguments-were-supplied.md  2025-10-12_19-18Z-untitled.md  2025-10-12_19-19Z-untitled.md  2025-10-12_19-20Z-fix-unresolved-imports-`governor-state-direct-directstate`,-`governor-state-keyed-notkeyed`.md  2025-10-12_19-20Z-fix-unused-import-`crate-server-errors-apperror`.md  2025-10-12_19-20Z-untitled.md  2025-10-12_19-21Z-fix-expected-a-type,-found-a-trait.md  2025-10-12_19-22Z-fix-syntax-error-expected-r-curly.md  2025-10-12_19-24Z-untitled.md  2025-10-12_19-31Z-fix-unresolved-import-`governor-state-direct-defaultdirectstatestore`.md  2025-10-12_19-33Z-fix-mismatched-types.md  2025-10-12_19-33Z-fix-syntax-error-expected-an-item.md  2025-10-12_19-34Z-untitled.md  2025-10-12_19-35Z-fix-the-method-`anyhow-kind`-exists-for-reference-`&box-dyn-stderror-`,-but-its-trait-bounds-were-not-satisfied.md  2025-10-12_19-37Z-fix-unused-import-`std-process-command`.md  2025-10-12_19-38Z-fix-`-`-couldn-t-convert-the-error-`str-stderror`-is-not-satisfied.md  2025-10-13_17-44Z-tests.md  2025-10-13_17-56Z-tests.md  2025-11-21_03-48Z-updating-resource-references-and-re-running-tests.md  2025-12-23_17-58Z-adding-the-rand-crate-to-cargo-toml.md  2025-12-23_19-49Z-metrics-initialization-and-logging-setup-in-rust.md  2025-12-26_22-20Z-squashing-commit-history-and-force-pushing.md  AGENTS.md  consolidated_history.md
data/api_keys.db/: db  snap.00000000000000EA
examples/: api_key_demo.rs
src/: embed.rs  lib.rs  main.rs  main_old.rs
src/cli/: config.rs  mod.rs  models.rs  server.rs
src/resources/: mod.rs
src/server/: api.rs  api_keys.rs  auth.rs  errors.rs  http.rs  limit.rs  logs.rs  mod.rs  start.rs  start_simple.rs  start_simple_server_tests.rs  state.rs  tests.rs
src/tools/: mod.rs
src/utils/: mod.rs
tarpaulin-report/: lcov.info  tarpaulin-report.html
test_api_keys.db/: db
test_api_keys_0141e1e3-fcb0-4620-882c-b69886cc40fe.db/: db
test_api_keys_051cf64a-914b-4940-9908-b636a3a35fac.db/: db
test_api_keys_2252d0ad-1621-4ec7-b939-4a310068a102.db/: db
test_api_keys_26d09fa1-c2f8-4b0d-8ec3-4c3631025cc1.db/: db
test_api_keys_2ee1366d-3c49-467d-ae08-f1ce7dce0e18.db/: db
test_api_keys_35f92371-c346-4a86-8d60-d2f3f8a44132.db/: db
test_api_keys_366c04f5-0004-4bc2-b6f7-35cf5ee98576.db/: db
test_api_keys_46deaa9a-64f1-4cdd-a157-5ebb197513d1.db/: db
test_api_keys_4e8b9689-3110-4d75-ac64-1e3d02f89a60.db/: db
test_api_keys_6cfc33bd-75d4-4baf-a7a4-71865c84fa9f.db/: db
test_api_keys_6ff1a0e0-8bfd-4d5b-8dc9-4a52f33189e1.db/: db
test_api_keys_79a07f5c-86c8-4044-9a40-faea2cb46f2a.db/: db
test_api_keys_7d40beba-8e3a-4e07-ae98-fccc7f541469.db/: db
test_api_keys_8d9e6dd4-8a1d-4589-80c3-944e6ff1d650.db/: db
test_api_keys_908645ed-f004-4aca-ba0b-9edf3846a115.db/: db
test_api_keys_c2e8968b-dc6a-440f-b5c5-24f9560ae93a.db/: db
test_api_keys_cc40badf-c38d-43ba-86ff-6354de52461b.db/: db
test_api_keys_d7dc227d-017f-4242-b7bf-45eeee4ac4c7.db/: db
test_api_keys_e3c7d398-0c2b-4e11-a262-671531681f3c.db/: db
test_api_keys_ee212e0b-ac3c-4383-af13-b96c5d13f867.db/: db
test_api_keys_ee49dc8d-68a8-4f7f-8b7f-04657a68d7c7.db/: db
test_api_keys_f2ccd040-0917-4629-9b77-2428ccf07e63.db/: db
test_api_keys_fe7f1f2c-1e84-4964-a7a5-ed757311f4c8.db/: db
tests/: cli_run_test.rs  resources_test.rs  server_errors_test.rs  server_http_test.rs  server_mod_test.rs
