[package]
name = "static_embedding_server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.100", features = ["backtrace"] }
axum = { version = "0.8.4", features = ["ws"] }
axum-extra = { version = "0.10.1", features = ["typed-header"] }
base64 = "0.22.1"
bincode = "2.0"
clap = { version = "4.5.48", features = ["cargo", "derive", "env", "string", "wrap_help", "debug", "deprecated"] }
colorized = "1.0.0"
crossbeam = { version = "0.8.4", features = ["nightly", "crossbeam-queue", "crossbeam-deque", "crossbeam-channel"] }
futures = { version = "0.3.31", features = ["thread-pool", "futures-executor"] }
http = "1.3.1"
jsonwebtoken = "9.3.1"
metrics = "0.24.3"
model2vec-rs = "0.1.3"
parking_lot = { version = "0.12.4", features = ["serde", "nightly"] }
rand = { version = "0.9.2", features = ["nightly", "serde"] }
reqwest = { version = "0.12.23", features = ["json", "http2", "rustls-tls"] }
ring = { version = "0.17.14", optional = true }
rmcp = { version = "0.6.4", optional = true, features = ["server", "macros", "transport-streamable-http-server", "transport-worker", "transport-sse-server", "transport-io"] }
rustls = { version = "0.23", optional = true }
rustls-pemfile = { version = "2.1", optional = true }
tokio-rustls = { version = "0.25", optional = true }
schemars = "1.0.4"
sled = "0.34"
serde = { version = "1.0.226", features = ["derive"] }
serde_json = { version = "1.0.145", features = ["unbounded_depth", "preserve_order"] }
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["trace", "cors"] }
tower_governor = "0.8.0"
tracing = { version = "0.1.41", features = ["log"] }
tracing-appender = { version = "0.2.3", features = ["parking_lot"] }
tracing-subscriber = { version = "0.3.20", features = ["fmt", "json", "env-filter", "local-time", "parking_lot"] }
# CLI and process management
chrono = { version = "0.4", features = ["serde"] }
sysinfo = "0.32"
toml = "0.8"
libc = "0.2"
governor = "0.10.1"
# API Key authentication
uuid = { version = "1.0", features = ["v4", "serde"] }
sha2 = "0.10"
axum-server = { version = "0.7.2", optional = true, features = ["tls-rustls"] }

[features]
default = []
tls = ["rustls", "rustls-pemfile", "tokio-rustls", "ring", "axum-server"]
mcp = ["rmcp"]

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tempfile = "3.0"
rcgen = "0.12"
