[package]
name = "static_embedding-tool"
version = "0.1.1"
edition = "2024"

[dependencies]
axum = { version = "*", features = ["json", "macros"] }
clap = { version = "*", features = ["derive"] }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
anyhow = "*"
thiserror = "*"
model2vec-rs = "*"
hf-hub = "*"
reqwest = { version = "*", features = [
    "json",
    "rustls-tls",
], default-features = false }
tracing = "*"
tracing-subscriber = { version = "*", features = ["env-filter"] }
toml = "*"
tempfile = "*"
rand = "*"
metrics = "*"
futures = "*"
tower-http = { version = "*", features = ["trace", "cors"] }
uuid = { version = "*", features = ["serde", "v4"] }
ulid-rs = "*"
tokio = { version = "*", features = [
    "signal",
    "rt-multi-thread",
    "tracing",
    "parking_lot",
    "time",
    "bytes",
    "process",
] }
chrono = { version = "*", features = ["serde"] }
schemars = { version = "*", features = ["derive"] }
rmcp = { version = "*", features = [
    "axum",
    "transport-streamable-http-server",
    "transport-streamable-http-server-session",
    "schemars",
    "server-side-http",
    "uuid",
    "transport-io",
] }
